# transcribe

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  assistant.rs  brand.rs  commands.rs  context.rs  dictation.rs  errors.rs  lib.rs  main.rs  models.rs  state_machine.rs
src-tauri/src/audio/: audio_level.rs  capture.rs  mod.rs  wav.rs
src-tauri/src/cleanup/: backtracking.rs  dictionary.rs  mod.rs  prompt_builder.rs  provider.rs  voice_actions.rs
src-tauri/src/database/: dictionary.rs  migrations.rs  mod.rs  settings.rs  transcripts.rs
src-tauri/src/insertion/: active_window.rs  clipboard.rs  context.rs  focus.rs  keyboard.rs  mod.rs  terminal.rs
src-tauri/src/security/: credentials.rs  mod.rs
src-tauri/src/shortcuts/: binding.rs  keys.rs  mod.rs  registry.rs
src-tauri/src/transcription/: deepgram.rs  mod.rs  provider.rs
src-tauri/src/transforms/: engine.rs  mod.rs  presets.rs
src/app/: brand.ts  providers.tsx  router.tsx  state.ts  store.test.ts  store.tsx  storeContext.ts  useAppStore.ts
src/assistant/: AssistantDrawer.tsx
src/buddy/: BuddyOverlay.tsx  BuddyState.test.ts  BuddyState.ts
src/lib/: native.ts
src/overlay/: AudioVisualizer.tsx  OverlayState.test.ts  OverlayState.ts  RecordingOverlay.tsx  useTones.ts
src/pages/: AboutPage.tsx  AssistantPage.tsx  DictationPage.tsx  DictionaryPage.tsx  HistoryPage.tsx  (+9 more)
(+12 files in other folders)
