[package]
name = "voiceflow-dev"
version = "0.1.0"
description = "Local-first Windows voice dictation for developers"
authors = ["VoiceFlow Dev contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "voiceflow_dev_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
arboard = "3.6"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.16"
futures-util = "0.3"
hound = "3.5"
keyring = "4.1"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }
